[gd_scene load_steps=2 format=2]

[ext_resource path="res://Init/Login.gd" type="Script" id=1]

[node name="Login" type="Control"]
margin_right = 478.656
margin_bottom = 272.121
rect_pivot_offset = Vector2( 380, 160 )
script = ExtResource( 1 )

[node name="user_id_label" type="Label" parent="."]
margin_left = 55.0838
margin_top = 80.2307
margin_right = 102.084
margin_bottom = 94.2307
text = "Your ID"

[node name="result_label" type="Label" parent="."]
visible = false
margin_left = 100.4
margin_top = 200.7
margin_right = 362.4
margin_bottom = 252.7
align = 1
valign = 1

[node name="user_pw_label" type="Label" parent="."]
margin_left = 56.2813
margin_top = 120.945
margin_right = 109.281
margin_bottom = 134.945
text = "Your PW"

[node name="user_nickname_label" type="Label" parent="."]
visible = false
margin_left = 56.2813
margin_top = 163.945
margin_right = 109.281
margin_bottom = 177.945
text = "Your Nick"

[node name="user_id" type="LineEdit" parent="."]
margin_left = 165.0
margin_top = 73.0
margin_right = 330.0
margin_bottom = 97.0

[node name="user_pw" type="LineEdit" parent="."]
margin_left = 165.0
margin_top = 108.0
margin_right = 330.0
margin_bottom = 132.0
secret = true

[node name="user_nickname" type="LineEdit" parent="."]
visible = false
margin_left = 165.0
margin_top = 157.0
margin_right = 330.0
margin_bottom = 181.0
secret = true

[node name="login" type="Button" parent="."]
margin_left = 353.0
margin_top = 72.0
margin_right = 440.0
margin_bottom = 133.0
text = "LOGIN"

[node name="signup" type="Button" parent="."]
margin_left = 353.0
margin_top = 144.2
margin_right = 440.0
margin_bottom = 205.2
text = "sign up"
[connection signal="pressed" from="login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="signup" to="." method="_on_signup_pressed"]
